--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.1",
     "express-edge": "^2.0.2",
     "express-fileupload": "^1.2.1",
-    "mongoose": "^6.0.14"
+    "mongoose": "^6.0.14",
+    "multer": "^1.4.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
