--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-edge": "^2.0.2",
-    "express-fileupload": "^1.2.1",
+    "express-session": "^1.17.2",
     "mongoose": "^6.0.14",
     "multer": "^1.4.3"
   },
