--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "express": "^4.17.1",
     "express-edge": "^2.0.2",
     "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
